Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,5 +6,6 @@
     <body>
         <h1>Name</h1>
         <p>This is the info page: here's some information about me!</p>
+        <h2>Tagline</h2>
     </body>
 </html>
