Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
         <title>Info Page</title>
     </head>
     <body>
-        <h1>Name</h1>
+        <h1>Buster's Best Bowling Alley</h1>
         <p>This is the info page: here's some information about me!</p>
         <h2>Tagline</h2>
     </body>
