--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,6 @@
     <body>
         <h1>Buster's Best Bowling Alley</h1>
         <p>This is the info page: here's some information about me!</p>
-        <h2>Tagline</h2>
+        <h2>Bet You Can't Bowl A Strike Every Time</h2>
     </body>
 </html>
